# gspeechd

./: .gitignore  README  configure.ac
src/: Makefile.am
src/server/: Makefile.am  gspeechd-client-context.c  gspeechd-client-context.h  gspeechd-client.c  gspeechd-client.h  gspeechd-log.c  gspeechd-log.h  gspeechd-options.c  gspeechd-options.h  gspeechd-server.c  gspeechd-server.h  gspeechd.c  gspeechd.h  options.c  options.h
src/ssip/: Makefile.am  ssip-enum-types.c.template  ssip-enum-types.h.template  ssip-enums.h  ssip-status-enum-types.c.template  ssip-status-enum-types.h.template  ssip-status-enums.h  ssip.c  ssip.h
